@@ -36,8 +36,6 @@ else()
     set(LIB_PATHS ${GLOG_ROOT} ${GLOG_ROOT}/lib)
 endif()
 
-set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
-include(FindPkgConfig)
 pkg_check_modules(PC_GLOG libglog)
 
 macro(_FIND_GLOG_LIBRARIES _var)
