@@ -14,10 +14,6 @@ if(NOT COMMAND feature_summary)
     include(FeatureSummary)
 endif()
 
-set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
-include(FindPkgConfig)
-include(FindPackageHandleStandardArgs)
-
 # if GR_REQUIRED_COMPONENTS is not defined, it will be set to the following list
 if(NOT GR_REQUIRED_COMPONENTS)
   set(GR_REQUIRED_COMPONENTS RUNTIME PMT BLOCKS FFT FILTER ANALOG)
@@ -131,7 +127,9 @@ function(GR_MODULE EXTVAR PCNAME INCFILE LIBFILE)
     set(GNURADIO_ALL_INCLUDE_DIRS ${GNURADIO_ALL_INCLUDE_DIRS} ${GNURADIO_${EXTVAR}_INCLUDE_DIRS} PARENT_SCOPE)
     set(GNURADIO_ALL_LIBRARIES    ${GNURADIO_ALL_LIBRARIES}    ${GNURADIO_${EXTVAR}_LIBRARIES}    PARENT_SCOPE)
 
-    find_package_handle_standard_args(GNURADIO_${EXTVAR} DEFAULT_MSG GNURADIO_${EXTVAR}_LIBRARIES GNURADIO_${EXTVAR}_INCLUDE_DIRS)
+    if(GNURADIO_${EXTVAR}_LIBRARIES AND GNURADIO_${EXTVAR}_INCLUDE_DIRS)
+        set(GNURADIO_${EXTVAR}_FOUND TRUE)
+    endif()
     message(STATUS "GNURADIO_${EXTVAR}_FOUND = ${GNURADIO_${EXTVAR}_FOUND}")
     set(GNURADIO_${EXTVAR}_FOUND ${GNURADIO_${EXTVAR}_FOUND} PARENT_SCOPE)
 
@@ -334,8 +332,9 @@ if(GNURADIO_VERSION VERSION_GREATER 3.8.99)
         message(STATUS " * INCLUDES=${GNURADIO_IIO_INCLUDE_DIRS}")
         message(STATUS " * LIBS=${GNURADIO_IIO_LIBRARIES}")
     endif()
-    find_package_handle_standard_args(GNURADIO_IIO DEFAULT_MSG GNURADIO_IIO_LIBRARIES GNURADIO_IIO_INCLUDE_DIRS)
-
+    if(GNURADIO_IIO_LIBRARIES AND GNURADIO_IIO_INCLUDE_DIRS)
+       set(GNURADIO_IIO_FOUND TRUE)
+    endif()
     if(GNURADIO_IIO_FOUND)
         message(STATUS "GNURADIO_IIO_FOUND = ${GNURADIO_IIO_FOUND}")
         # append to all includes and libs list
