@@ -21,8 +21,6 @@ if(NOT COMMAND feature_summary)
     include(FeatureSummary)
 endif()
 
-set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
-include(FindPkgConfig)
 pkg_check_modules(PC_LOG4CPP log4cpp QUIET)
 
 if(LOG4CPP_INCLUDE_DIR)
