@@ -22,8 +22,6 @@ if(NOT COMMAND feature_summary)
     include(FeatureSummary)
 endif()
 
-set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
-include(FindPkgConfig)
 pkg_check_modules(PC_PUGIXML pugixml QUIET)
 
 find_path(PUGIXML_INCLUDE_DIR
