@@ -18,8 +18,6 @@ if(NOT COMMAND feature_summary)
     include(FeatureSummary)
 endif()
 
-set(PKG_CONFIG_USE_CMAKE_PREFIX_PATH TRUE)
-include(FindPkgConfig)
 pkg_check_modules(PC_VOLK volk QUIET)
 
 find_path(VOLK_INCLUDE_DIRS
